overflow bug

--- a/src/components/leader/scores.css
+++ b/src/components/leader/scores.css
@@ -31,7 +31,7 @@
     align-items: center;
     width: 100%;
     padding: 0;
-    height: 75vh;
+    height: 70vh;
     overflow: scroll;
   }
 
